# gramma

./: .gitignore  AGENTS.md  Agents.md  CMakeLists.txt  Needs.md  README.md
apps/bounce/: BounceApp.cpp  BounceApp.hpp  main.cpp
apps/evolution/: EvolutionApp.cpp  EvolutionApp.hpp  main.cpp
apps/hello/: HelloApp.cpp  HelloApp.hpp  main.cpp
apps/particle/: ParticleApp.cpp  ParticleApp.hpp  main.cpp
apps/play/: PlayApp.cpp  PlayApp.hpp  main.cpp
apps/rescue/: RescueApp.cpp  RescueApp.hpp  main.cpp
apps/sim/: SegregationApp.cpp  SegregationApp.hpp  SimApp.cpp  SimApp.hpp  main.cpp
assets/: agent-body.frag  agent-body.vert  agent-line.frag  agent-line.vert  agent.frag  agent.vert  agentbatch.frag  agentbatch.vert  basic.frag  basic.vert  circle.frag  circle.vert  food.frag  food.vert  line.frag  line.vert  particle.frag  particle.vert  phong.frag  phong.vert  ring.frag  ring.vert  unlit.frag  unlit.vert
cmake/: CompilerSettings.cmake
inc/gramma/: Body2D.hpp  Camera2D.hpp  CircleBatch.hpp  IApp.hpp  LineBatch.hpp  Runner.hpp  Shader.hpp  Time.hpp  Window.hpp  World2D.hpp
inc/gramma/core/: AppContext.hpp  Colors.hpp  Environment.hpp  IApp.hpp  LineOfSightService.hpp  Math.hpp  Runner.hpp  SpatialGrid.hpp  Time.hpp  Window.hpp
inc/gramma/model/: Agent.hpp  AgentFactory.hpp  AgentSerializer.hpp  AgentTraits.hpp  Body2D.hpp  BruteForceCollisionHandler.hpp  DirectMovement.hpp  EnergyNeed.hpp  Environment.hpp  ExerciseNeed.hpp  Exit.hpp  FoodResource.hpp  FoodSource.hpp  GreedyExitStrategy.hpp  Home.hpp  HungerNeed.hpp  ICollisionHandler.hpp  IModel.hpp  IMovementStrategy.hpp  INavigationStrategy.hpp  INeed.hpp  IResource.hpp  ISensor.hpp  KDTreeCollisionHandler.hpp  MoveTask.hpp  RandomDetourMovement.hpp  RandomWalkTask.hpp  RelocateTask.hpp  RestTask.hpp  Room.hpp  SafetyNeed.hpp  SatisfactionNeed.hpp  SeekFoodTask.hpp  SeekResourceTask.hpp  SegregationAgentFactory.hpp  SegregationTraits.hpp  SimAgentFactory.hpp  SimpleRepulsionHandler.hpp  Simulation.hpp  Task.hpp  (+6 more)
inc/gramma/model/agent/: Agent.hpp  AgentFactory.hpp  AgentSerializer.hpp  AgentTraits.hpp  SimAgentFactory.hpp
inc/gramma/model/environment/: Environment.hpp
inc/gramma/model/evolution/: CircleFormationEvaluator.hpp  FeedForwardGenome.hpp  FitnessTracker.hpp  Genome.hpp  Population.hpp
inc/gramma/model/movement/: DirectMovement.hpp  IMovementStrategy.hpp  RandomDetourMovement.hpp
inc/gramma/model/need/: EnergyNeed.hpp  SafetyNeed.hpp  SocialNeed.hpp  WalkNeed.hpp
inc/gramma/model/particle/: IParticleBehavior.hpp  NeuralParticleBehavior.hpp  Particle.hpp  ParticleBehavior.hpp  ParticleLifeBehavior.hpp  ParticleSystem.hpp  RepulsionOnlyBehavior.hpp  SimpleParticleBehavior.hpp
inc/gramma/model/physics/: Box2DPhysicsEngine.hpp  IPhysicsEngine.hpp  SimpleGridPhysicsEngine.hpp
inc/gramma/model/resource/: Exit.hpp  FoodResource.hpp  Home.hpp  IConsumable.hpp  IResource.hpp
inc/gramma/model/sensor/: VisionSensor.hpp
inc/gramma/model/social/: SocialSensor.hpp
inc/gramma/model/task/: EnergyNeedTaskBuilder.hpp  INeedTaskBuilder.hpp  ITask.hpp  MoveTask.hpp  RestTask.hpp  SafetyNeedTaskBuilder.hpp  SeekAgentTask.hpp  SeekResourceTask.hpp  SequenceTask.hpp  SocialNeedTaskBuilder.hpp  TaskFactory.hpp
inc/gramma/ui/: IGuiLayer.hpp  ImGuiLayer.hpp
inc/gramma/util/: Math.hpp  TimeMeasureGuard.hpp
inc/gramma/view/: AgentBatchView.hpp  AgentView.hpp  Camera2D.hpp  CircleBatch.hpp  CircleShape.hpp  CircleShapes.hpp  Element.hpp  EnvironmentView.hpp  Font.hpp  FoodView.hpp  GlowAgentView.hpp  Gui.hpp  HomeView.hpp  Hud.hpp  IAgentView.hpp  IRenderable.hpp  Image.hpp  LineBatch.hpp  LineShape.hpp  Mesh.hpp  Panel.hpp  ParticleSystemView.hpp  ParticleView.hpp  QuadBatch.hpp  QuadShapes.hpp  ResourceView.hpp  RoomView.hpp  Shader.hpp  TextElement.hpp  Texture.hpp  TexturedQuadShapes.hpp  TriangularMesh.hpp  Uniforms.hpp
src/: Camera2D.cpp  CircleBatch.cpp  LineBatch.cpp  Runner.cpp  Shader.cpp  Time.cpp  Window.cpp  World2D.cpp
src/core/: Environment.cpp  LineOfSightService.cpp  Runner.cpp  SpatialGrid.cpp  Time.cpp  Window.cpp
src/model/: Agent.cpp  AgentFactory.cpp  AgentSerializer.cpp  Box2DPhysicsEngine.cpp  BruteForceCollisionHandler.cpp  CircleFormationEvaluator.cpp  DirectMovement.cpp  EnergyNeed.cpp  EnergyNeedTaskBuilder.cpp  Environment.cpp  ExerciseNeed.cpp  FeedForwardGenome.cpp  FitnessTracker.cpp  FoodSource.cpp  Genome.cpp  GreedyExitStrategy.cpp  Home.cpp  HungerNeed.cpp  KDTreeCollisionHandler.cpp  MoveTask.cpp  NeuralParticleBehavior.cpp  Particle.cpp  ParticleLifeBehavior.cpp  ParticleSystem.cpp  Population.cpp  RandomDetourMovement.cpp  RandomWalkTask.cpp  RelocateTask.cpp  RepulsionOnlyBehavior.cpp  RestTask.cpp  Room.cpp  SafetyNeedTaskBuilder.cpp  SatisfactionNeed.cpp  SeekAgentTask.cpp  SeekFoodTask.cpp  SeekResourceTask.cpp  SegregationAgentFactory.cpp  SequenceTask.cpp  SimAgentFactory.cpp  SimpleGridPhysicsEngine.cpp  (+9 more)
src/ui/: ImGuiLayer.cpp
src/view/: AgentBatchView.cpp  AgentView.cpp  Camera2D.cpp  CircleBatch.cpp  CircleShape.cpp  CircleShapes.cpp  EnvironmentView.cpp  Font.cpp  FoodView.cpp  GlowAgentView.cpp  Gui.cpp  HomeView.cpp  Hud.cpp  Image.cpp  LineBatch.cpp  LineShape.cpp  Mesh.cpp  Panel.cpp  ParticleSystemView.cpp  ParticleView.cpp  QuadBatch.cpp  QuadShapes.cpp  ResourceView.cpp  RoomView.cpp  Shader.cpp  TextElement.cpp  Texture.cpp  TexturedQuadShapes.cpp  TriangularMesh.cpp
